--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<ul class="menu__list">
 					
 					<li class="menu__list__item">
-						<a href="#" class="menu__list__item__link cc-active active-link">Projects</a>
+						<a href="https://github.com/dbijaya?tab=repositories/" class="menu__list__item__link cc-active active-link">Projects</a>
 					</li>
 					
 					<li class="menu__list__item">
