--- a/todolist/home.html
+++ b/todolist/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="author" content="B Jay">
+	<!-- <meta name="author" content="B Jay"> -->
 	<!-- refresh the site every 30 second
 	<meta http-equiv="refresh" content="30"> -->
 	<title>Home Page</title>
@@ -23,19 +23,21 @@
 				<div class="col-1">-</div>
 				<div class="col-10">
 					<form action="home.html" method="post">
-						<input type="text" id="listValue" name="list" size="28" placeholder = " New item...   (max 28 characters)">
+						<input type="text" id="listValue" name="list" maxlength="28" placeholder = " New item...   (max 28 characters)" onclick="document.getElementById('listValue').value = ''">
 						<button type="submit" id="insert"><strong>Submit</strong></button>
 					</form>
 				</div>
 				<div class="col-1"></div>
 			</div>
 			<div class="row">
-				<div class="col-1">-</div>
+				<div class="col-1">
+					<ul></ul>
+				</div>
 				<div class="col-9 listHere">
 					<ul id="ul" style="list-style: none; color: yellow;">
 						
 					</ul>
-					<button type="submit" id="clear"><strong>Clear</strong></button> 
+					<button type="submit" id="clear" onclick="document.getElementById('listValue').value = ''"><strong>Clear</strong></button> 
 				</div>
 			</div>
 		</div>
