--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Bijay Thapa</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="gitlab"><i class="bx bxl-gitlab"></i></a>
-          <a href="#" class="github"><i class="bx bxl-github"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://gitlab.com/bijaythapa" class="gitlab"><i class="bx bxl-gitlab"></i></a>
+          <a href="https://github.com/dbijaya" class="github"><i class="bx bxl-github"></i></a>
+          <a href="www.linkedin.com/in/bijaythapaa" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
           <!-- <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
         </div>
@@ -70,7 +70,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Bijay Thapa</h1>
-      <p>I'm <span class="typed" data-typed-items="Software Engineer, Webapp Developer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Software Engineer, Web Developer"></span></p>
     </div>
   </section><!-- End Hero -->
 
