--- a/index.html
+++ b/index.html
@@ -191,16 +191,16 @@
             </div>
 
           	<div class="progress">
-              <span class="skill">Java <i class="val">70%</i></span>
+              <span class="skill">Java <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Databases <i class="val">55%</i></span>
+              <span class="skill">Databases <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -276,14 +276,14 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Trainee at Insight Workshop</h4>
+              <h4>Insight Workshop</h4>
               <h5>2020 Jan-Mar</h5>
               <p><em>Naxal, Kathmandu</em></p>
               <ul>
                 <li>trained in Web development in Django, a Python framework.</li>
-                <li>Done projects within the company.</li>
+                <li>done projects with-in the company.</li>
                 <li>learn more about REST APIs and Fullstack development.</li>
-                <li>Gain knowledge on databases: SQLite, PostgreSQL, MySQL.</li>
+                <li>Gain knowledge on databases: PostgreSQL, MySQL, SQLite.</li>
               </ul>
             </div>
             <div class="resume-item">
